test/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: test-namespace
  labels:
    app: test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: test
